      authentication (issue #104).

version 4.4.3 (2014-09-19)
    * Removes final from AuthorizationGrant classes.
    * Removes final from OIDCAccessTokenResponse class.

version 4.5 (2014-09-19)
    * Adds default public constructor to GrantType class, unbounds its static
      parse method.

version 4.6 (2014-11-04)
    * HTTPResponse Location header switches from URL to URI representation
      (issue #109).
    * Fixes NullPointerException in HTTPRequest.send on empty error stream
      (issue #110).
    * Adds additional information to ParseException thrown by
      HTTPResponse.ensureStatusCode.
    * Upgrades Nimbus JOSE+JWT dependency to 3.2.1.

version 4.7 (2014-11-10)
    * Adds support for OpenID Connect session logout requests.
    * Adds support for Accept HTTP request header.
    * Upgrades Apache Commons Lang dependency to 3.3.2.
    * Upgrades to Apache Commons Codec dependency to 1.10.

version 4.7.1 (2014-11-11)
    * Upgrades Nimbus JOSE+JWT dependency to 3.2.2.

version 4.8 (2014-11-20)
    * Adds new ClientCredentialsParser class.
    * Fixes OIDCClientInformation parsing of secrets with no expiration (iss
      #117).
    * Adds missing shadow methods to BearerTokenError (iss #116).
    * Upgrades Nimbus JOSE+JWT dependency to 3.4.

version 4.8.1 (2014-12-14)
    * Upgrades Nimbus JOSE+JWT dependency to 3.5.

version 4.8.2 (2015-01-12)
    * Upgrades Nimbus JOSE+JWT dependency to 3.6.

version 4.8.3 (2015-01-15)
    * Upgrades Nimbus JOSE+JWT dependency to 3.7.

version 4.8.4 (2015-02-03)
    * Renames OIDCProviderMetadata methods to match established convention.
    * Adds missing static AuthenticationRequest.parse(URI) method.

version 4.8.5 (2015-02-04)
    * Refines AuthorizationRequest.parse error reporting.
    * Refines AuthenticationRequest.parse error reporting.
    * Refines TokenRequest.parse error reporting.

version 4.9 (2015-02-18)
    * Fixes UserInfoErrorResponse.parse bug.