@@ -241,4 +241,5 @@ version 4.8.5 (2015-02-04)
     * Refines TokenRequest.parse error reporting.
 
 version 4.9 (2015-02-18)
+    * Add convenience HTTPResponse.indicatesSuccess method.
     * Fixes UserInfoErrorResponse.parse bug.
